Fix CORS error and update SecurityConfig